[project]
name = "cioran-diario"
version = "0.1.0"
description = ""
authors = [
    {name = "Hugo Moraga"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "instagrapi (>=2.1.5,<3.0.0)",
    "tweepy (>=4.15.0,<5.0.0)",
    "python-telegram-bot (>=22.1,<23.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
